--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -1,4 +1,11 @@
-set(EXTENSION "rdkit")
+if(APPLE)
+  set (EXTENSION_PREFIX "")
+  set (EXTENSION_SUFFIX ".so")
+else(APPLE)
+  set (EXTENSION_PREFIX "lib")
+  set (EXTENSION_SUFFIX "")
+endif(APPLE)
+set(EXTENSION rdkit)
 include_directories(${PostgreSQL_INCLUDE_DIRS})
 if(WIN32)
   include_directories(${PostgreSQL_INCLUDE_DIR}/server/port/win32)
@@ -15,46 +22,6 @@ if(RDK_BUILD_INCHI_SUPPORT)
   add_definitions(-DBUILD_INCHI_SUPPORT)
 endif(RDK_BUILD_INCHI_SUPPORT)
 add_definitions(-DRDKITVER="007300")
-if(MSVC)
-  add_definitions(-DWIN32 -DBUILDING_MODULE -DNOMINMAX)
-endif(MSVC)
-link_directories(${PostgreSQL_LIBRARY_DIRS})
-link_directories(${RDKit_LibDir})
-add_library(${EXTENSION} SHARED
-            adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
-            rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
-target_link_libraries(${EXTENSION} ${PostgreSQL_LIBRARIES})
-if(WIN32)
-  target_link_libraries(${EXTENSION} postgres)
-endif(WIN32)
-set(avalonRegress "")
-set(inchiRegress "")
-set(pgRDKitLibSuffix "")
-if(RDK_PGSQL_STATIC AND (NOT MSVC))
-  set(pgRDKitLibSuffix "_static")
-endif()
-set(pgRDKitLibList "")
-if(RDK_BUILD_AVALON_SUPPORT)
-  set(avalonRegress "avalon")
-  set(pgRDKitLibList "${pgRDKitLibList}AvalonLib;avalon_clib;")
-endif(RDK_BUILD_AVALON_SUPPORT)
-if(RDK_BUILD_INCHI_SUPPORT)
-  set(inchiRegress "inchi")
-  set(pgRDKitLibList "${pgRDKitLibList}RDInchiLib;Inchi;")
-endif(RDK_BUILD_INCHI_SUPPORT)
-set(pgRDKitLibList "${pgRDKitLibList}"
-    "MolHash;FMCS;ChemReactions;ChemTransforms;"
-    "FileParsers;SmilesParse;Fingerprints;Subgraphs;Descriptors;"
-    "PartialCharges;SubstructMatch;GraphMol;DataStructs;Depictor;"
-    "RDGeometryLib;RDGeneral")
-foreach(pgRDKitLib ${pgRDKitLibList})
-  set(pgRDKitLibs "${pgRDKitLibs}${pgRDKitLib}${pgRDKitLibSuffix};")
-endforeach()
-target_link_libraries(${EXTENSION} ${pgRDKitLibs})
-if(RDK_BUILD_THREADSAFE_SSS)
-  target_link_libraries(${EXTENSION} ${RDKit_THREAD_LIBS})
-endif(RDK_BUILD_THREADSAFE_SSS)
-
 if(NOT DEFINED ${PostgreSQL_ROOT})
   if(DEFINED ENV{PostgreSQL_ROOT})
     set(PostgreSQL_ROOT "$ENV{PostgreSQL_ROOT}")
@@ -80,6 +47,54 @@ run_pg_config (--sharedir PG_SHAREDIR)
 run_pg_config (--pkglibdir PG_PKGLIBDIR)
 set(PG_PKGLIBDIR "${PG_PKGLIBDIR}/")
 set(PG_EXTENSIONDIR "${PG_SHAREDIR}/extension")
+if(MSVC)
+  add_definitions(-DWIN32 -DBUILDING_MODULE -DNOMINMAX)
+endif(MSVC)
+if(APPLE)
+  set(CMAKE_EXE_LINKER_FLAGS "-bundle -multiply_defined suppress"
+              "-Wl,-dead_strip_dylibs -bundle_loader ${PG_BINDIR}/postgres")
+  add_executable("${EXTENSION}${EXTENSION_SUFFIX}"
+              adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
+              rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
+else(APPLE)
+  link_directories(${PostgreSQL_LIBRARY_DIRS})
+  link_directories(${RDKit_LibDir})
+  add_library(${EXTENSION} SHARED
+              adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
+              rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
+  target_link_libraries(${EXTENSION} ${PostgreSQL_LIBRARIES})
+  if(WIN32)
+    target_link_libraries(${EXTENSION} postgres)
+  endif(WIN32)
+endif(APPLE)
+set(avalonRegress "")
+set(inchiRegress "")
+set(pgRDKitLibSuffix "")
+if(RDK_PGSQL_STATIC AND (NOT MSVC))
+  set(pgRDKitLibSuffix "_static")
+endif()
+set(pgRDKitLibList "")
+if(RDK_BUILD_AVALON_SUPPORT)
+  set(avalonRegress "avalon")
+  set(pgRDKitLibList "${pgRDKitLibList}AvalonLib;avalon_clib;")
+endif(RDK_BUILD_AVALON_SUPPORT)
+if(RDK_BUILD_INCHI_SUPPORT)
+  set(inchiRegress "inchi")
+  set(pgRDKitLibList "${pgRDKitLibList}RDInchiLib;Inchi;")
+endif(RDK_BUILD_INCHI_SUPPORT)
+set(pgRDKitLibList "${pgRDKitLibList}"
+    "MolHash;FMCS;ChemReactions;ChemTransforms;"
+    "FileParsers;SmilesParse;Fingerprints;Subgraphs;Descriptors;"
+    "PartialCharges;SubstructMatch;GraphMol;DataStructs;Depictor;"
+    "RDGeometryLib;RDGeneral")
+foreach(pgRDKitLib ${pgRDKitLibList})
+  set(pgRDKitLibs "${pgRDKitLibs}${pgRDKitLib}${pgRDKitLibSuffix};")
+endforeach()
+target_link_libraries(${EXTENSION}${EXTENSION_SUFFIX} ${pgRDKitLibs})
+if(RDK_BUILD_THREADSAFE_SSS)
+  target_link_libraries(${EXTENSION}${EXTENSION_SUFFIX} ${RDKit_THREAD_LIBS})
+endif(RDK_BUILD_THREADSAFE_SSS)
+
 if(WIN32 AND NOT UNIX)
   set(PGREGRESS_BINARY "${PG_BINDIR}\\pg_regress.exe")
   string(REGEX REPLACE "/" "\\\\" PG_EXTENSIONDIR ${PG_EXTENSIONDIR})
@@ -112,7 +127,7 @@ else(WIN32 AND NOT UNIX)
   set(testPgSQLName "${testPgSQLName}.sh")
   set(installPgSQLName "${installPgSQLName}.sh")
   set(installCopyCommand "cp")
-  set(PG_RDKIT_LIB_SRC "lib${EXTENSION}.so")
+  set(PG_RDKIT_LIB_SRC "${EXTENSION_PREFIX}${EXTENSION}.so")
   set(PG_RDKIT_LIB_DEST "${EXTENSION}.so")
   set(PGREGRESS_BINDIR_SWITCH "psqldir")
 endif(WIN32 AND NOT UNIX)
@@ -139,7 +154,7 @@ set(installPgSQLBody
 file(WRITE ${testPgSQLName} ${testPgSQLBody})
 file(WRITE ${installPgSQLName} ${installPgSQLBody})
 foreach(testDir sql data expected)
-  add_custom_command(TARGET ${EXTENSION} PRE_BUILD
+  add_custom_command(TARGET ${EXTENSION}${EXTENSION_SUFFIX} PRE_BUILD
       COMMAND "${CMAKE_COMMAND}" -E copy_directory
       "${PG_CURRENT_SOURCE_DIR}${testDir}" "${PG_CURRENT_BINARY_DIR}${testDir}")
 endforeach()
