--- a/External/AvalonTools/CMakeLists.txt
+++ b/External/AvalonTools/CMakeLists.txt
@@ -1,7 +1,7 @@
 if(RDK_BUILD_AVALON_SUPPORT)
-if(NOT DEFINED ${AVALONTOOLS_DIR})
+if(NOT DEFINED AVALONTOOLS_DIR)
   set(AVALONTOOLS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/SourceDistribution")
-endif(NOT DEFINED ${AVALONTOOLS_DIR})
+endif()
 string(REGEX REPLACE "\\\\" "/" AVALONTOOLS_DIR ${AVALONTOOLS_DIR})
 set(AVALON_SRC_PATH ${AVALONTOOLS_DIR}/common)
 set(fileToPatch "${CMAKE_CURRENT_SOURCE_DIR}/SourceDistribution/common/reaccsio.c")
@@ -13,9 +13,14 @@ if(EXISTS "${fileToPatch}")
   endif()
 endif()
 if(needDownload)
-  set(AVALONTOOLS_URL "http://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.2/AvalonToolkit_1.2.0.source.tar")
-  set(AVALONTOOLS_BASE "AvalonToolkit_1.2.0.source.tar")
-  downloadAndCheckMD5(${AVALONTOOLS_URL} "${CMAKE_CURRENT_SOURCE_DIR}/${AVALONTOOLS_BASE}" "092a94f421873f038aa67d4a6cc8cb54")
+  if(NOT DEFINED AVALONTOOLS_URL)
+    set(AVALONTOOLS_URL "http://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.2/AvalonToolkit_1.2.0.source.tar")
+  endif()
+  if(NOT DEFINED AVALONTOOLS_MD5SUM)
+    set(AVALONTOOLS_MD5SUM "092a94f421873f038aa67d4a6cc8cb54")
+  endif()
+  string(REGEX REPLACE "^.*/" "" AVALONTOOLS_BASE "${AVALONTOOLS_URL}")
+  downloadAndCheckMD5(${AVALONTOOLS_URL} "${CMAKE_CURRENT_SOURCE_DIR}/${AVALONTOOLS_BASE}" ${AVALONTOOLS_MD5SUM})
   execute_process(COMMAND ${CMAKE_COMMAND} -E tar xf
     ${CMAKE_CURRENT_SOURCE_DIR}/AvalonToolkit_1.2.0.source.tar
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
