- added the possibility to override AVALONTOOLS_BASE and INCHI_BASE too

--- a/External/AvalonTools/CMakeLists.txt
+++ b/External/AvalonTools/CMakeLists.txt
@@ -19,7 +19,9 @@ if(needDownload)
   if(NOT DEFINED AVALONTOOLS_MD5SUM)
     set(AVALONTOOLS_MD5SUM "092a94f421873f038aa67d4a6cc8cb54")
   endif()
-  string(REGEX REPLACE "^.*/" "" AVALONTOOLS_BASE "${AVALONTOOLS_URL}")
+  if(NOT DEFINED AVALONTOOLS_BASE)
+    string(REGEX REPLACE "^.*/" "" AVALONTOOLS_BASE "${AVALONTOOLS_URL}")
+  endif()
   downloadAndCheckMD5(${AVALONTOOLS_URL} "${CMAKE_CURRENT_SOURCE_DIR}/${AVALONTOOLS_BASE}" ${AVALONTOOLS_MD5SUM})
   execute_process(COMMAND ${CMAKE_COMMAND} -E tar xf
     ${CMAKE_CURRENT_SOURCE_DIR}/AvalonToolkit_1.2.0.source.tar
