--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,10 @@ install:
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda install -q -c rdkit boost=1.55.0 ; fi
 
  # get working boost libs
- - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CONDA_PYTHON_VERSION" == "2.7" ]]; then wget https://www.dropbox.com/s/nei7rp1txrnd4lw/boost-1.56.0-py27_3.tar.bz2?dl=0 -o boost.bz2 ; fi
- - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CONDA_PYTHON_VERSION" == "3.4" ]]; then wget https://www.dropbox.com/s/vpt112m15kuibgh/boost-1.56.0-py34_3.tar.bz2?dl=0 -o boost.bz2 ; fi
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then conda install -q boost.bz2 ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CONDA_PYTHON_VERSION" == "2.7" ]]; then wget https://www.dropbox.com/s/nei7rp1txrnd4lw/boost-1.56.0-py27_3.tar.bz2?dl=0 -o boost-1.56.0-py27_3.tar.bz2 ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CONDA_PYTHON_VERSION" == "3.4" ]]; then wget https://www.dropbox.com/s/vpt112m15kuibgh/boost-1.56.0-py34_3.tar.bz2?dl=0 -o boost-1.56.0-py34_3.tar.bz2 ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CONDA_PYTHON_VERSION" == "2.7" ]]; then conda install boost-1.56.0-py27_3.tar.bz2 ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" && "$CONDA_PYTHON_VERSION" == "3.4" ]]; then conda install boost-1.56.0-py34_3.tar.bz2 ; fi
  # get swig 3?
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then conda install -q -c https://conda.anaconda.org/anaconda swig=3.0.8 ; fi
  
@@ -101,6 +102,9 @@ script:
  - export PYINC="$PY_PREFIX/include/python$CONDA_PYTHON_VERSION"
  - export AVALON="$RDBASE/External/AvalonTools/distrib/SourceDistribution"
 
+ # silly fix for python3 header files
+ - if [[ ! -e $PYINC ]] ; then export export PYINC="$PY_PREFIX/include/python$CONDA_PYTHON_VERSION"m ; fi
+ 
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export PYTHON_LIBRARY=`find $PY_PREFIX/lib -name "libpython$CONDA_PYTHON_VERSION*.so"` ; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PYTHON_LIBRARY=`find $PY_PREFIX/lib -name "libpython$CONDA_PYTHON_VERSION*.dylib"` ; fi
 
