adjust travis scripts now that we no longer have to explicitly download the avalon and InChI code

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,12 +50,6 @@ before_script:
  - wget http://search.maven.org/remotecontent?filepath=junit/junit/4.10/junit-4.10.jar -O $RDBASE/External/java_lib/junit.jar
  - ls -l $RDBASE/External/java_lib
 
- - mkdir $RDBASE/External/AvalonTools/distrib
- - wget https://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.2/AvalonToolkit_1.2.0.source.tar/download -O $RDBASE/External/AvalonTools/distrib/AvalonToolkit_1.2.0.source.tar
- - cd $RDBASE/External/AvalonTools/distrib
- - tar xf AvalonToolkit_1.2.0.source.tar
- - ls -l $RDBASE/External/AvalonTools/distrib
- 
  - export PYTHON=`which python`
  - echo $PYTHON
  - export PY_PREFIX=`$PYTHON -c "import sys; print(sys.prefix)"`
@@ -68,7 +62,7 @@ script:
  - cd $RDBASE
  - mkdir build
  - cd build
- - cmake -D Python_ADDITIONAL_VERSIONS=$TRAVIS_PYTHON_VERSION -D PYTHON_EXECUTABLE=$PYTHON -D PYTHON_LIBRARY=`find $PY_PREFIX -name "libpython$TRAVIS_PYTHON_VERSION*.so"` -D PYTHON_NUMPY_INCLUDE_PATH=$PY_SP_DIR/numpy/core/include -D BOOST_ROOT=$PY_PREFIX -D Boost_NO_SYSTEM_PATHS=ON -D RDK_BUILD_SWIG_WRAPPERS=ON -D AVALONTOOLS_DIR=$RDBASE/External/AvalonTools/distrib/SourceDistribution -D RDK_BUILD_AVALON_SUPPORT=ON -DRDK_BUILD_THREADSAFE_SSS=on -DRDK_TEST_MULTITHREADED=on ..
+ - cmake -D Python_ADDITIONAL_VERSIONS=$TRAVIS_PYTHON_VERSION -D PYTHON_EXECUTABLE=$PYTHON -D PYTHON_LIBRARY=`find $PY_PREFIX -name "libpython$TRAVIS_PYTHON_VERSION*.so"` -D PYTHON_NUMPY_INCLUDE_PATH=$PY_SP_DIR/numpy/core/include -D BOOST_ROOT=$PY_PREFIX -D Boost_NO_SYSTEM_PATHS=ON -D RDK_BUILD_SWIG_WRAPPERS=ON -D RDK_BUILD_AVALON_SUPPORT=ON -D RDK_BUILD_INCHI_SUPPORT=ON -DRDK_BUILD_THREADSAFE_SSS=on -DRDK_TEST_MULTITHREADED=on ..
  - cat CMakeCache.txt # useful for debugging/troubleshooting
 
  - make -j2
