- added a fix for earlier version of PostgreSQL on Windows in   CMakeLists.txt - fixed a bug in Code/PgSQL/rdkit/rdkit_gist.c which did not cause   issues with PostgreSQL 9.5 on Windows, but does with earlier PostgreSQL   versions - removed an unnecessary conditional compilation clause from   Code/PgSQL/rdkit/rdkit.h as PostgreSQL 8.x is not supported anymore

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -49,6 +49,9 @@ set(PG_PKGLIBDIR "${PG_PKGLIBDIR}/")
 set(PG_EXTENSIONDIR "${PG_SHAREDIR}/extension")
 if(MSVC)
   add_definitions(-DWIN32 -DBUILDING_MODULE -DNOMINMAX)
+  if(NOT (MSVC_VERSION LESS 1700))
+    add_definitions(-DHAVE_RINT)
+  endif()
 endif(MSVC)
 if(APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "-bundle -multiply_defined suppress"
