download junit.jar automatically when it is needed

--- a/Code/JavaWrappers/gmwrapper/CMakeLists.txt
+++ b/Code/JavaWrappers/gmwrapper/CMakeLists.txt
@@ -12,8 +12,18 @@ include(UseJava)
 # Make sure we can access the junit.jar -- needed for compiling/running tests
 find_jar(JUNIT_JAR junit PATHS ${RDKit_JavaLibDir})
 if (NOT JUNIT_JAR)
-	MESSAGE ("junit.jar was not found in classpath or ${RDKit_JavaLibDir}.  Please add it to this directory and rerun cmake.")
-	MESSAGE(FATAL_ERROR "Cannot find required JUnit library (junit.jar)")
+  if(NOT DEFINED JUNIT_URL)
+    set(JUNIT_URL "http://search.maven.org/remotecontent?filepath=junit/junit/4.10/junit-4.10.jar")
+  endif()
+  if(NOT DEFINED JUNIT_MD5SUM)
+    set(JUNIT_MD5SUM "68380001b88006ebe49be50cef5bb23a")
+  endif()
+  downloadAndCheckMD5(${JUNIT_URL} "${RDKit_JavaLibDir}/junit.jar" ${JUNIT_MD5SUM})
+  find_jar(JUNIT_JAR junit PATHS ${RDKit_JavaLibDir})
+  if (NOT JUNIT_JAR)
+   	 MESSAGE ("junit.jar was not found in classpath or ${RDKit_JavaLibDir}.  Please add it to this directory and rerun cmake.")
+	   MESSAGE(FATAL_ERROR "Cannot find required JUnit library (junit.jar)")
+  endif()
 endif (NOT JUNIT_JAR)
 
 # Likewise for javadoc
