--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -22,17 +22,17 @@ if(RDK_BUILD_INCHI_SUPPORT)
   add_definitions(-DBUILD_INCHI_SUPPORT)
 endif(RDK_BUILD_INCHI_SUPPORT)
 add_definitions(-DRDKITVER="007300")
-if(NOT DEFINED ${PostgreSQL_ROOT})
+if(NOT DEFINED PostgreSQL_ROOT)
   if(DEFINED ENV{PostgreSQL_ROOT})
     set(PostgreSQL_ROOT "$ENV{PostgreSQL_ROOT}")
   endif(DEFINED ENV{PostgreSQL_ROOT})
-endif(NOT DEFINED ${PostgreSQL_ROOT})
-if(NOT DEFINED ${PostgreSQL_ROOT})
+endif(NOT DEFINED PostgreSQL_ROOT)
+if(NOT DEFINED PostgreSQL_ROOT)
   set(PostgreSQL_ROOT "${PostgreSQL_LIBRARY_DIRS}/..")
-endif(NOT DEFINED ${PostgreSQL_ROOT})
-if(NOT DEFINED ${PostgreSQL_CONFIG_DIR})
+endif(NOT DEFINED PostgreSQL_ROOT)
+if(NOT DEFINED PostgreSQL_CONFIG_DIR)
   set(PostgreSQL_CONFIG_DIR "${PostgreSQL_ROOT}/bin")
-endif(NOT DEFINED ${PostgreSQL_CONFIG_DIR})
+endif(NOT DEFINED PostgreSQL_CONFIG_DIR)
 macro (run_pg_config arg var)
   execute_process(COMMAND ${PostgreSQL_CONFIG_DIR}/pg_config ${arg}
                   RESULT_VARIABLE pgsql_config_result
