Adds FunctionalGroups to the FilterCatalog

--- a/Code/GraphMol/FilterCatalog/CMakeLists.txt
+++ b/Code/GraphMol/FilterCatalog/CMakeLists.txt
@@ -22,6 +22,7 @@ rdkit_library(FilterCatalog
               FilterCatalog.cpp
               FilterCatalogEntry.cpp
               FilterMatchers.cpp
+              FunctionalGroupHierarchy.cpp
               LINK_LIBRARIES Subgraphs SubstructMatch SmilesParse
               GraphMol RDGeometryLib Catalogs RDGeneral ${Boost_SERIALIZATION_LIBRARY} )
 
@@ -29,6 +30,7 @@ rdkit_headers(FilterCatalogEntry.h
               FilterCatalog.h
               FilterMatcherBase.h
               FilterMatchers.h
+              FunctionalGroupHierarchy.h
               DEST GraphMol/FilterCatalog)
 
 add_subdirectory(Wrap)
