--- a/Code/GraphMol/Descriptors/CMakeLists.txt
+++ b/Code/GraphMol/Descriptors/CMakeLists.txt
@@ -1,6 +1,8 @@
 rdkit_library(Descriptors
               Crippen.cpp MolDescriptors.cpp MolSurf.cpp Lipinski.cpp ConnectivityDescriptors.cpp
-              MQN.cpp 
+              KitchenSink.cpp
+              MQN.cpp
+              Property.cpp
               LINK_LIBRARIES PartialCharges SmilesParse FileParsers Subgraphs SubstructMatch 
                 ${RDKit_THREAD_LIBS})
 
@@ -8,6 +10,8 @@ rdkit_headers(Crippen.h Lipinski.h
               MolDescriptors.h
               MolSurf.h
               ConnectivityDescriptors.h MQN.h
+              KitchenSink.h
+              Property.h
               DEST GraphMol/Descriptors)
 
 rdkit_test(testDescriptors test.cpp 
