--- a/Code/JavaWrappers/gmwrapper/CMakeLists.txt
+++ b/Code/JavaWrappers/gmwrapper/CMakeLists.txt
@@ -330,6 +330,11 @@ ADD_TEST(JavaDiversityPickerTests
 		-cp "${JUNIT_JAR}${PATH_SEP}${CMAKE_JAVA_TEST_OUTDIR}${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}/org.RDKit.jar"
 		org.RDKit.DiversityPickerTests)
 
+ADD_TEST(JavaBitOpsTests
+	    java -Djava.library.path=${CMAKE_CURRENT_SOURCE_DIR}
+		-cp "${JUNIT_JAR}${PATH_SEP}${CMAKE_JAVA_TEST_OUTDIR}${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}/org.RDKit.jar"
+		org.RDKit.BitOpsTests)
+
 
 INSTALL(TARGETS GraphMolWrap
               DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
