Fix building with G++ on Mac OS X
Patch courtesy of Roger.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,7 +201,9 @@ if(APPLE)
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
    else()
      MESSAGE("== BOOST USES STDLIBC++")
-     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+     if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+     endif()
      # FOR CXX11 support SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
   endif()
 endif(APPLE)
